# robotic_2026_final_project_phase2

./: .gitignore  CMakeLists.txt  README.md  __init__.py  drone_fsm.py  package.xml  requirements_phase2.txt  system_launch.launch  workflow.md
convex_opt/: __init__.py  convex_path_optimizer.py
minimum_snap/: __init__.py  min_snap_trajectory.py
ros_nodes/: __init__.py  ego_mavros_bridge.py  obstacle_avoidance_planner.py
tests/: test_phase2.py
